experiments/breakthrough/Computational Number Theory - Digit Distribution Patterns - 20260325_203340/run_005/06_run_output.txt

--- STDERR ---
  File "D:\LocalProjects\Python apps\AutoResearch\experiments\breakthrough\20260325_203340\run_005\_experiment_temp.py", line 1
    !@#$
    ^
SyntaxError: invalid syntax
